<resources>
    <string name="app_name">placeable_final</string>
    <string name="home">Home</string>
    <string name="sampleprofile">Mayank Kashyap</string>
    <string name="home_profile_name">David Brewer</string>
    <string name="home_profile_course">MCA</string>
    <string name="home_profile_tpocerdit">TPO : 10</string>
    <string name="home_profile_status">Unplaced</string>
    <string name="noticeboard">Noticeboard</string>
    <string name="home_profile_regno">2020CA039</string>
    <string name="home_profile_link">View Complete Profile</string>
    <string name="Status">Status</string>
    <string name="verification_status">Verified</string>
    <string name="tpocerdit">10</string>
    <string name="placement_panel">Placement</string>
    <string name="placement_status">Not Offered</string>
    <string name="profile_basic_details">Basic Details</string>
    <string name="profile_phoneno">6306223053</string>
    <string name="profile_academics_details">Academics Details</string>
    <string name="profile_text">Profile</string>
    <string name="example">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. loris simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signin">Sign In</string>
    <string name="forget">Forget Password</string>
    <string name="register">Register</string>
    <string name="notregsitered">Click Here to</string>
    <!-- registration page strings -->
    <string name="register_firstname">First Name</string>
    <string name="register_regno">Registration Number</string>
    <string name="register_phone_no">Phone Number</string>
    <string name="register_email">Email Id</string>
    <string name="register_confirm_password">Confirm Passowrd</string>
    <string name="register_password">Password</string>
    <string name="register_cancel">Cancel</string>
    <string name="register_register">Register</string>
    <string name="register_alreadysignin">Already Registered</string>
    <string name="register_signin">Sign In</string>
    <string name="foregt_createnew_password">Create New Password</string>
    <string name="forget_enternew_password">Enter New Password</string>
    <string name="forget_enter_registrationno">Enter Registration Number</string>
    <string name="forget_confirm_password">Confirm Passoword</string>
    <string name="forget_cancel">Cancel</string>
    <string name="forget_Confirm">Confirm</string>
    <string name="register_last_name">Last Name</string>
    <string name="home_complete_profile">Complete Profile</string>
    <string name="complete_proflie_text">Click to Complete Profile</string>
    <string name="feedback">Feedback</string>
    <string name="student_feedback_btn">Write Feedback</string>
    <string name="prevFeed">Previous Feedbacks</string>
    <string name="write_feed">Your Feedback</string>
    <string name="Title">Title</string>
    <string name="feeback_des">Description</string>
    <string name="basicdetails_name">Name</string>
    <string name="basicdetails_dob">Date of Birth</string>
    <string name="basicdetails_Gender">Gender</string>
    <string name="basicdetails_Collageaddress">Collage Email Address</string>
    <string name="basicdetails_regno">Registration Number</string>
    <string name="basicdetails_phno">Phone Number</string>
    <string name="basicdetails_category">Category</string>
    <string name="basicdetails_pwd">Pwd</string>
    <string name="basicdetails_course">Course</string>
    <string name="basicdetails_branch">Branch</string>
    <string name="basicdetails_gaurdian">Gaurdian</string>
    <string name="basicdetails_state">State</string>
    <string name="basicdetails_country">Country</string>
    <string name="basicdetails_presentaddress">Present Address</string>
    <string name="basicdetails_permanentaddress">Permanent Address</string>
    <string name="basicdetails_cancel">Cancel</string>
    <string name="academics_highschooldetails"><u>High School Details</u></string>
    <string name="academics_highschoolname">High School Name</string>
    <string name="academics_highschoolboard">Board</string>
    <string name="academics_10thyear">Year</string>
    <string name="academics_10thyear_percentage">Percentage</string>
    <string name="academics_interschooldetails"><u>Intermediate</u></string>
    <string name="academics_interschoolname">Intermediate</string>
    <string name="academics_interschoolboard">Board</string>
    <string name="academics_12thyear">Year</string>
    <string name="academics_gradchooldetails"><u>Graduation Details</u></string>
    <string name="academics_collage">Collage Name</string>
    <string name="academics_universityname">University Name</string>
    <string name="academics_graddegree">Degree</string>
    <string name="academics_cancel">Cancel</string>
    <string name="academics_next">Next</string>
    <string name="basicdetails_next">Next</string>
    <string name="additional_uploadphototext"><u>Upload Photo</u></string>
    <string name="additonal_Location_image">Location</string>
    <string name="additional_addphoto">Add Photo</string>
    <string name="additonal_Location_resume">Location</string>
    <string name="additional_uploadresumetext"><u>Upload Resume</u></string>
    <string name="additional_addproject"><u>Add Project</u></string>
    <string name="additonal_projecttitle">Title</string>
    <string name="additional_next">Save</string>
    <string name="additional_cancel">Cancel</string>
    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
</resources>