<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".additional_details">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/sf_ui_mediam"
                    android:text="@string/academics_highschooldetails"
                    android:textColor="@color/light_grey"
                    android:textSize="25dp" />

                <EditText
                    android:id="@+id/academics_details_schoolname"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/input"
                    android:hint="@string/academics_highschoolname" />

                <EditText
                    android:id="@+id/academics_details_10th_board"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/input"
                    android:hint="@string/academics_highschoolboard" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <!--start here!-->
                    <EditText
                        android:id="@+id/academics_details_10th_year"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/input"
                        android:hint="@string/academics_10thyear" />

                    <EditText
                        android:id="@+id/academics_details_10th_percentage"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/input"
                        android:hint="@string/academics_10thyear_percentage" />
                </LinearLayout>

                <View
                    android:id="@+id/academics_details_linebar1"
                    style="@style/Divider"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/sf_ui_mediam"
                    android:text="@string/academics_interschooldetails"
                    android:textColor="@color/light_grey"
                    android:textSize="25dp" />

                <EditText
                    android:id="@+id/academics_details_schoolname12th"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/input"
                    android:hint="@string/academics_interschoolname" />

                <EditText
                    android:id="@+id/academics_details_12th_board"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/input"
                    android:hint="@string/academics_interschoolboard" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <!--start here!-->
                    <EditText
                        android:id="@+id/academics_details_12th_year"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/input"
                        android:hint="@string/academics_12thyear" />

                    <EditText
                        android:id="@+id/academics_details_12th_percentage"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/input"
                        android:hint="@string/academics_10thyear_percentage" />
                </LinearLayout>

                <View
                    android:id="@+id/academics_details_linebar2"
                    style="@style/Divider"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/sf_ui_mediam"
                    android:text="@string/academics_gradchooldetails"
                    android:textColor="@color/light_grey"
                    android:textSize="25dp" />

                <EditText
                    android:id="@+id/academics_details_collagename"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/input"
                    android:hint="@string/academics_collage" />

                <EditText
                    android:id="@+id/academics_details_collage"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/input"
                    android:hint="@string/academics_universityname" />

                <EditText
                    android:id="@+id/academics_details_graduation"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/input"
                    android:hint="@string/academics_graddegree" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <!--start here!-->
                    <EditText
                        android:id="@+id/academics_details_collage_year"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/input"
                        android:hint="@string/academics_12thyear" />

                    <EditText
                        android:id="@+id/academics_details_collage_percentage"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/input"
                        android:hint="@string/academics_10thyear_percentage" />
                </LinearLayout>

                <View
                    android:id="@+id/academics_details_linebar3"
                    style="@style/Divider"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp">

                    <Button
                        android:id="@+id/academics_details_backbutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="100dp"
                        android:background="@drawable/button"
                        android:fontFamily="@font/sf_ui_bold"
                        android:text="@string/academics_cancel"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/academics_nextbutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button"
                        android:fontFamily="@font/sf_ui_bold"
                        android:text="@string/academics_next"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
</FrameLayout>
