<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageButton
        android:id="@+id/register_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/backbutton"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/register_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_back"
        android:fontFamily="@font/sf_ui_bold"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/light_grey"
        android:textSize="40dp"
        android:layout_marginTop="40dp"/>
    <androidx.cardview.widget.CardView

        android:id="@+id/register_cardviewfirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_register"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:outlineAmbientShadowColor="@color/black"
        app:cardCornerRadius="30dp"
        >
    <LinearLayout
        android:id="@+id/register_inputfield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_register"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center"
        >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >

        <EditText
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/input"
            android:hint="@string/register_firstname" />
        <EditText
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:hint="@string/register_firstname"
            android:background="@drawable/input"/>
    </LinearLayout>
        <EditText
            android:id="@+id/register_register_no"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/register_regno"
            android:background="@drawable/input"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/register_phone_no"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/register_phone_no"
            android:background="@drawable/input"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/register_email"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/register_email"
            android:background="@drawable/input"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/register_password"
            android:layout_width="350dp"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:hint="@string/register_password"
            android:background="@drawable/input"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/register_confirm_password"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/register_confirm_password"
            android:background="@drawable/input"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_cardviewfirst"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:outlineAmbientShadowColor="@color/black"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/register_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/register_confirm_password"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="5dp"
                android:layout_marginRight="120dp"
                android:background="@drawable/button"
                android:gravity="center"
                android:text="@string/register_cancel"
                android:textColor="@color/white"
                android:layout_marginBottom="5dp"/>

            <Button
                android:id="@+id/register_request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/register_confirm_password"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/button"
                android:gravity="center"
                android:text="@string/register_register"
                android:textColor="@color/white"
                android:layout_marginBottom="5dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>